--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 ul {
   list-style-type: none;
+  padding: 0;
 }
 
 #home {
@@ -32,3 +33,26 @@ ul {
   margin-bottom: 1em;
 }
 
+footer {
+  background-color: #ccc;
+}
+
+/* PC */
+@media screen and (min-width: 576px) {
+  #skills .licence {
+    padding-left: 50px;
+  }
+  #about .row > div:last-child {
+    padding-left: 50px;
+  }
+}
+
+/* 모바일 */
+@media screen and (max-width: 575px) {
+  #skills .licence {
+    margin-top: 40px;
+  }
+  #about .row > div:last-child {
+    margin-top: 40px;
+  
+}
